fix up alignment in district page stats column, update district and member pages to use new chart name, add a little more styling to district along with its race chart

--- a/site/media/master/elizabeth.css
+++ b/site/media/master/elizabeth.css
@@ -139,15 +139,22 @@
 .stats .census .mil dd {
 	background-image: url(../master/medal.png);
 }
-.stats .census .residence .urban {
-	background: url(../master/skyscrapers.png);
-	padding-top: 30px;
+
+.stats .census .residence dd {
 	padding-left: 0;
 }
-.stats .census .residence .rural {
-	background: url(../master/farm.png);
+
+.stats .census .residence .urban {
+	/*background: url(../master/skyscrapers.png);
 	padding-top: 30px;
-	padding-left: 0;
+	padding-left: 0;*/
+	float:left;
+}
+.stats .census .residence .rural {
+	/*background: url(../master/farm.png);
+	padding-top: 30px;
+	padding-left: 0;*/
+	float:right;
 }
 .stats .census .sex {
 	clear: both;
@@ -161,7 +168,12 @@
 .stats .census .sex .female {
 	float: right;
 }
-.stats .census .bar-fake-graph {
+
+.stats .census .race dd {
+	padding-left:0;
+}
+
+.1stats .census .bar-fake-graph {
 	background: #75757d;
 	height: 30px;
 	width: 200px;
@@ -222,6 +234,7 @@
 	color:#c46708;
 }
 
+ .legislation-tabs a {display:block;}
  .legislation-tabs a:hover { border: none; }
 
 
@@ -349,3 +362,6 @@
 	padding-left: 30px;
 }	
 	
+.bar_graph {
+	margin:15px 0 25px 0;
+}
